--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "argon2": "^0.43.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3"
   }
 }
