--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "description": "",
   "dependencies": {
     "argon2": "^0.43.1",
+    "axios": "^1.11.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3"
   }
